<resources>
    <string name="app_name" >Movies App</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="search_item">Search</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_3">Videos</string>
    <string name="blank_space"> </string>
    <string name="original_tittle">Original tittle:</string>
    <string name="release_date">Release date:</string>
    <string name="runtime">Runtime:</string>
    <string name="companies">Companies:</string>
    <string name="genres">Genres:</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="first_air_date">First air date:</string>
    <string name="original_name">Original name:</string>
    <string name="seasons">Seasons:</string>
</resources>
