<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/original_tittle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

            <TextView
                android:id="@+id/original_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/release_date"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

            <TextView
                android:id="@+id/release_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />
        </LinearLayout>


        <TextView
            android:id="@+id/homepage_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/runtime"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

            <TextView
                android:id="@+id/runtime_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />
        </LinearLayout>


        <TextView
            android:id="@+id/adult_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/companies"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

            <TextView
                android:id="@+id/production_companies_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/genres"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />

            <TextView
                android:id="@+id/genres_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_default_size" />
        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
